force-app/main/default/objects/Story_Link__c/Story_Link__c.object-meta.xml
<CustomObject>
    <label>Story Link</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Story Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>