force-app/main/default/objects/Story_Link__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <description>Represent the type of connection in between the main story and connected story</description>
    <label>Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relates To</fullName>
                <default>true</default>
                <label>Relates To</label>
            </value>
            <value>
                <fullName>Depends On</fullName>
            </value>
            <value>
                <fullName>Blocks</fullName>
            </value>
            <value>
                <fullName>Duplicate Of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>