force-app/main/default/objects/Story_Link__c/fields/Source_Story__c.field-meta.xml
<CustomField>
    <fullName>Source_Story__c</fullName>
    <description>represent the main story/Request</description>
    <label>Source Story</label>
    <referenceTo>Story__c</referenceTo>
    <relationshipLabel>Story Links</relationshipLabel>
    <relationshipName>Source_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>