force-app/main/default/objects/Story_Link__c/fields/Target_Story__c.field-meta.xml
<CustomField>
    <fullName>Target_Story__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Represent the target story which is being linked with main story as a connected story.</description>
    <label>Target Story</label>
    <referenceTo>Story__c</referenceTo>
    <relationshipLabel>Story Links (Target Story)</relationshipLabel>
    <relationshipName>Target_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>